--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-Hello COursera!
+<h1>Hello Coursera! It's a great course!</h1>
+
 </body>
 </html>
